fix js in view 'manage.html'

--- a/src/manage/view/manage.html
+++ b/src/manage/view/manage.html
@@ -18,10 +18,10 @@ jQuery(function(){
   set_info("${info}")
 #end if
 #if $varExists('warning')
-  set_info("${warning}")
+  set_warning("${warning}")
 #end if
 #if $varExists('error')
-  set_info("${error}")
+  set_error("${error}")
 #end if
 });
 </script>
