--- a/src/blog/view/post.html
+++ b/src/blog/view/post.html
@@ -1,13 +1,11 @@
-<!-- blog app posts -->
+<!-- blog app post -->
 
 <div id="app-blog-posts">
-  #for $post in $posts
   <div style="clear:both">
     <h3 class="blog-post-title"><a href="/blog/post/${post.id}">${post.title}</a></h3>
     <div class="blog-post-info"><a href="/blog/cat/${post.category.id}">${post.category.name}</a>, published at ${utils.format_datetime($post.creation_date)}</div>
     <div class="blog-post-content">${post.content__raw__}</div>
   </div>
-  #end for
 </div>
 
-<!-- end blog app posts -->
+<!-- end blog app post -->
