--- a/src/blog/view/post.html
+++ b/src/blog/view/post.html
@@ -3,7 +3,14 @@
 <div id="app-blog-posts">
   <div style="clear:both">
     <h3 class="blog-post-title"><a href="/blog/post/${post.id}">${post.title}</a></h3>
-    <div class="blog-post-info"><a href="/blog/cat/${post.category.id}">${post.category.name}</a>, published at ${utils.format_datetime($post.creation_date)}</div>
+    <div class="blog-post-info"><a href="/blog/cat/${post.category.id}">${post.category.name}</a>,
+      #if $post.tags
+        tags:
+        #for $tag in $post.tags
+          <a href="/blog/tag/${tag}">$tag</a>
+        #end for
+      #end if
+      published at ${utils.format_datetime($post.creation_date)}</div>
     <div class="blog-post-content">${post.content__raw__}</div>
   </div>
 </div>
