--- a/src/widget/view/manage_widget_list.html
+++ b/src/widget/view/manage_widget_list.html
@@ -4,30 +4,6 @@ var g_app = '${app}';
 var g_command = '${command}';
 //#raw
 $(function() {
-    $('#select_all').change(function() {
-        if ($('#select_all').is(':checked')) {
-            $('.select-p').attr('checked', 'checked');
-            $('.tr-hover').addClass('tr-selected');
-        }
-        else {
-            $('.select-p').removeAttr('checked');
-            $('.tr-hover').removeClass('tr-selected');
-        }
-    });
-    $('.select-p').click(function() {
-        if ($(this).is(':checked')) {
-            $(this).parent().parent().parent().addClass('tr-selected');
-        }
-        else {
-            $(this).parent().parent().parent().removeClass('tr-selected');
-        }
-        if ($('input.select-p:checked').length==$('input.select-p').length) {
-            $('#select_all').attr('checked', 'checked');
-        }
-        else {
-            $('#select_all').removeAttr('checked');
-        }
-	});
 });
 //#end raw
 </script>
@@ -40,37 +16,30 @@ $(function() {
   	<input type="hidden" id="btn" name="btn" value="" />
   	<input type="hidden" id="pid" name="id" value="" />
     <div class="th bottom-line">
-      <div class="span-1"><div><input type="checkbox" id="select_all" name="select_all" /></div></div>
-      <div class="span-10"><div>Title</div></div>
-      <div class="span-5"><div>Author</div></div>
-      <div class="span-1"><div><img src="/blog/static/image/comment.png" width="16" height="16" alt="Comments" title="Comments" /></div></div>
-      <div class="span-3 last"><div>Date</div></div>
+      <div class="span-1"><div></div></div>
+      <div class="span-9"><div>Title</div></div>
+      <div class="span-4"><div>Author</div></div>
+      <div class="span-6 last"><div>URL</div></div>
     </div>
   #if not $widgets
     <div class="tr"><div class="span-20 last"><div style="padding: 16px; text-align:center; font-style:italic;">No widget installed.</div></div></div>
   #end if
   #for $w in $widgets
     <div class="tr tr-hover">
-      <div class="span-1"><div><input type="checkbox" name="u" class="select-p" value="${w.name}" /></div></div>
-      <div class="span-10">
+      <div class="span-1"><div><img src="/widget/installed/${w.id}/static/icon.png" width="32" height="32" /></div></div>
+      <div class="span-9">
       	<div style="font-weight:bold">
-          <a href="?app=${app}&command=${command}&btn=edit&id=${w.name}">${w.description}</a>
+          <a href="${w.url}" target="_blank">${w.title}</a>
         </div>
-        <div>
-          aaa
-		</div>
+        <div>${w.description}</div>
       </div>
-      <div class="span-5"><div>${w.author}</div></div>
-      <div class="span-1"><div>0</div></div>
-      <div class="span-3 last">wwww</div>
+      <div class="span-4"><div>${w.author}</div></div>
+      <div class="span-6 last"><div><a href="${w.url}" target="_blank">${w.url}</a></div></div>
     </div>
   #end for
   	<div class="tr top-line">
       <div class="span-19 last">
-        <div>
-          <button type="button" name="add" id="add">Add New</button>
-          <button type="button" name="delete" id="delete">Delete</button>
-        </div>
+        <div>Visit ExpressMe official web site to <a href="http://www.expressme.org/blog/c/widgets">get more widgets</a>.</div>
       </div>
   	</div>
   </div>
