update widget manage.

--- a/src/widget/view/manage_widget_list.html
+++ b/src/widget/view/manage_widget_list.html
@@ -39,7 +39,7 @@ $(function() {
   #end for
   	<div class="tr top-line">
       <div class="span-19 last">
-        <div>Visit ExpressMe official web site to <a href="http://www.expressme.org/blog/c/widgets">get more widgets</a>.</div>
+        <div>Visit ExpressMe official web site to <a href="http://www.expressme.org/blog/c/widgets" target="_blank">get more widgets</a>.</div>
       </div>
   	</div>
   </div>
