--- a/src/manage/static/css/manage.css
+++ b/src/manage/static/css/manage.css
@@ -28,14 +28,17 @@ a:focus   {color: #d54e4d; text-decoration:none}
 
 .box-shadow { background-color:#FFF; border:1px solid #666; box-shadow:3px 3px 3px #666; -moz-box-shadow:3px 3px 3px #666; -webkit-box-shadow:3px 3px 3px #666; }
 
+/*
 .box-round { -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }  
 .box-round-top-left-corner { -moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px; }
+*/
 
 .app-menu-show { background-image:url(/manage/static/image/show.png); background-repeat:no-repeat; background-position:96% 50%; }
 .app-menu-hide { background-image:url(/manage/static/image/hide.png); background-repeat:no-repeat; background-position:96% 50%; }
 
 .app-menu { border:1px solid #E3E3E3; margin-bottom:16px; background-color:#FFF }
-.app-menu-title { padding:3px 6px; background-color:#F1F1F1; font-weight:bold; border-bottom:1px solid #E3E3E3 }
+.app-menu-title { padding:3px 6px; background-color:#F1F1F1; font-weight:bold; }
+.app-menu-content { border-top:1px solid #E3E3E3; }
 
 a.app-menu-item { padding:3px 6px; display:block; width:92% }
 a.app-menu-item:link { background-color:transparent }
