update manage app

--- a/src/manage/view/manage_navigation.html
+++ b/src/manage/view/manage_navigation.html
@@ -82,7 +82,7 @@ function validate_form() {
     <div class="tr top-line">
       <div class="span-12">
         <div>
-          <button type="submit" name="save" id="save">Save</button>
+          <button type="submit" name="save" id="save" class="normal">Save</button>
           <span id="loading" class="loading">Saving, please wait...</span>
 		</div>
       </div>
