--- a/src/manage/static/css/manage.css
+++ b/src/manage/static/css/manage.css
@@ -18,7 +18,7 @@ a:focus   {color: #d54e4d; text-decoration:none}
 #header a:active  {color: #fff; text-decoration:none}
 #header a:focus   {color: #fff; text-decoration:none}
 
-#footer { color:#999; background-color:#464646; }
+#footer { color:#999; background-color:#464646; margin-top:6px; }
 #footer div { line-height:40px; font-size:16px; font-style:italic; padding:6px 12px; }
 #footer a:link    {color: #ccc; text-decoration:none}
 #footer a:visited {color: #ccc; text-decoration:none}
