--- a/src/widget/view/manage_sidebar.html
+++ b/src/widget/view/manage_sidebar.html
@@ -21,7 +21,7 @@ $(function() {
       <div class="span-6"><div><img src="/theme/${theme.id}/static/sidebars.png" width="200" height="120" style="border:solid 1px #ccc" /></div></div>
       <div class="span-14 last">
         <div>Your current theme is <span style="font-weight:bold">${theme.title}</span>. <a href="?app=theme&command=edit_theme">Change the theme</a></div>
-        <div>Your current theme has 2 sidebars.</div>
+        <div>Your current theme has ${theme.sidebars} sidebar(s).</div>
         <div>You can <a href="">change the theme</a>.</div>
         <div>Click to show the sidebar, then drag widgets into it.</div>
       </div>
