--- a/src/widget/view/manage_sidebar.html
+++ b/src/widget/view/manage_sidebar.html
@@ -28,40 +28,114 @@ $(function() {
     </div>
 
     <!-- start sidebar -->
-    <div id="sidebar1" class="tr tr-hover top-line">
-      <div class="span-20 last"><div>Sidebar 1</div></div>
+    <div style="width:770px;margin:0px 10px 10px 10px">
+      <div class="panel" style="width:770px">
+        <div class="panel-title" style="width:770px"><div>Sidebar 1</div></div>
+        <div class="panel-content" style="width:770px">
+          <div class="tr" style="width:770px">
+            <!-- start widget -->
+            <!-- end widget -->
+          </div>
+        </div>
+      </div>
     </div>
-    <div id="sidebar1-body" class="tr">
-      <!-- start widget in sidebar -->
-      <div id="w-34543" style="padding:0px;margin:6px;border:1px solid #E3E3E3;">
-        <div id="w-34543-header" style="background-color:#F1F1F1;padding:3px 6px;margin:0px;" class="app-menu-hide"><img src="/widget/installed/adsense/static/icon.png" width="16" height="16" /> <span>Title</span> - <a href="">Move Up</a> - <a href="">Move Down</a> - <a href="">Delete</a></div>
-        <div id="w-34543-body" style="border-top:1px solid #E3E3E3;padding:3px 6px;margin:0px;">
-          show settings
-          <div id="w-34543-footer" style="border-top:1px solid #E3E3E3;padding:3px 6px;margin:0px;">
-            <button name="save-widget">Save</button> <button name="cancel-widget">Cancel</button>
+    <!-- end sidebar -->
+
+    <!-- start sidebar -->
+    <div style="width:770px;margin:0px 10px 10px 10px">
+      <div class="panel" style="width:770px">
+        <div class="panel-title" style="width:770px"><div>Sidebar 2</div></div>
+        <div class="panel-content" style="width:770px">
+          <div class="tr" style="width:770px">
+            <!-- start widget -->
+            <div style="width:736px;margin:10px">
+              <div class="panel" style="width:736px">
+                <div class="panel-title" style="width:736px"><div>Google AdSense</div></div>
+                <div class="panel-content" style="width:736px">
+                  <div class="form-field">
+                    <div class="form-field-title">Pub ID (Your AdSense pub id like <em>pub-123456789</em>):</div>
+                    <div class="form-field-input"><input type="text" name="pub_id" value="" /></div>
+                    <div class="form-field-title">Slot (Your Ad slot like <em>123456789</em>):</div>
+                    <div class="form-field-input"><input type="text" name="slot" value="" /></div>
+                    <div class="form-field-title">Size (Your Ad size):</div>
+                    <div class="form-field-input">
+                      <select name="size">
+                        <optgroup label="Recommended">
+                          <option value="300x250">300 x 250 Medium Rectangle</option>
+                          <option value="336x280">336 x 280 Large Rectangle</option>
+                          <option value="728x90">728 x 90 Leaderboard</option>
+                          <option value="160x600">160 x 600 Wide Skyscraper</option>
+                        </optgroup>
+                        <optgroup label="Other - Horizontal">
+                          <option value="468x60">468 x 60 Banner</option>
+                          <option value="234x60">234 x 60 Half Banner</option>
+                        </optgroup>
+                        <optgroup label="Other - Vertical">
+                          <option value="120x600">120 x 600 Skyscraper</option>
+                          <option value="120x240">120 x 240 Vertical Banner</option>
+                        </optgroup>
+                        <optgroup label="Other - Square">
+                          <option value="250x250">250 x 250 Square</option>
+                          <option value="200x200">200 x 200 Small Square</option>
+                          <option value="180x150">180 x 150 Small Rectangle</option>
+                          <option value="125x125">125 x 125 Button</option>
+                        </optgroup>
+                      </select>
+                    </div>
+                    <div class="form-field-input"><input type="button" name="save" value="Save" /><input type="button" name="cancel" value="Cancel" /></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end widget -->
+            <!-- start widget -->
+            <div style="width:736px;margin:10px">
+              <div class="panel" style="width:736px">
+                <div class="panel-title" style="width:736px"><div>Google AdSense [Move Up | Move Down]</div></div>
+                <div class="panel-content" style="width:736px;display:none">
+                </div>
+              </div>
+            </div>
+            <!-- end widget -->
+            <!-- start widget -->
+            <div style="width:736px;margin:10px">
+              <div class="panel" style="width:736px">
+                <div class="panel-title" style="width:736px"><div>Subscribe</div></div>
+                <div class="panel-content" style="width:736px;display:none">
+                </div>
+              </div>
+            </div>
+            <!-- end widget -->
           </div>
         </div>
       </div>
-      <!-- end widget in sidebar -->
-      <!-- start widget in sidebar -->
-      <div id="w-34543" style="padding:0px;margin:6px;border:1px solid #E3E3E3;">
-        <div id="w-34543-header" style="background-color:#F1F1F1;padding:3px 6px;margin:0px;" class="app-menu-hide"><img src="/widget/installed/adsense/static/icon.png" width="16" height="16" /> <span>Title</span> - <a href="">Move Up</a> - <a href="">Move Down</a> - <a href="">Delete</a></div>
-        <div id="w-34543-body" style="border-top:1px solid #E3E3E3;padding:3px 6px;margin:0px;">
-          show settings
-          <div id="w-34543-footer" style="border-top:1px solid #E3E3E3;padding:3px 6px;margin:0px;">
-            <button name="save-widget">Save</button> <button name="cancel-widget">Cancel</button>
+    </div>
+    <!-- end sidebar -->
+
+    <!-- start sidebar -->
+    <div style="width:770px;margin:0px 10px 10px 10px">
+      <div class="panel" style="width:770px">
+        <div class="panel-title" style="width:770px"><div>Sidebar 3</div></div>
+        <div class="panel-content" style="width:770px;display:none">
+          <div class="tr" style="width:770px">
+            <!-- start widget -->
+            <!-- end widget -->
           </div>
         </div>
       </div>
-      <!-- end widget in sidebar -->
-      <div id="sidebar1-footer" style="padding:3px 6px;margin:0px;">
-        <select name="select-widget">
-          <option value="-" selected="selected">-- Select a widget --</option>
-          #for $w in $widgets
-            <option value="${w.id}">${w.title}</option>
-          #end for
-        </select>
-        <button name="add">Add Widget</button>
+    </div>
+    <!-- end sidebar -->
+
+    <!-- start sidebar -->
+    <div style="width:770px;margin:0px 10px 10px 10px">
+      <div class="panel" style="width:770px">
+        <div class="panel-title" style="width:770px"><div>Sidebar 4</div></div>
+        <div class="panel-content" style="width:770px;display:none">
+          <div class="tr" style="width:770px">
+            <!-- start widget -->
+            <!-- end widget -->
+          </div>
+        </div>
       </div>
     </div>
     <!-- end sidebar -->
