--- a/src/widget/view/manage_sidebar.html
+++ b/src/widget/view/manage_sidebar.html
@@ -111,47 +111,24 @@ $(function() {
             </div>
             <!-- end widget -->
 
+            #for $wi in $sidebars[0]
             <!-- start widget -->
             <div style="width:736px;margin:10px">
               <div class="panel widget" style="width:736px">
-                <div class="panel-title widget-title" style="width:736px"><div>GOOGLE Ad.</div></div>
+                <div class="panel-title widget-title" style="width:736px"><div>$wi</div></div>
                 <div class="panel-content widget-content" style="width:736px;display:none">
                   <div class="form-field">
+                  #for $setting in $wi.settings
                     <div class="form-field-title">Pub ID (Your AdSense pub id like <em>pub-123456789</em>):</div>
-                    <div class="form-field-input"><input type="text" name="pub_id" value="" /></div>
-                    <div class="form-field-title">Slot (Your Ad slot like <em>123456789</em>):</div>
                     <div class="form-field-input"><input type="text" name="slot" value="" /></div>
-                    <div class="form-field-title">Size (Your Ad size):</div>
-                    <div class="form-field-input">
-                      <select name="size">
-                        <optgroup label="Recommended">
-                          <option value="300x250">300 x 250 Medium Rectangle</option>
-                          <option value="336x280">336 x 280 Large Rectangle</option>
-                          <option value="728x90">728 x 90 Leaderboard</option>
-                          <option value="160x600">160 x 600 Wide Skyscraper</option>
-                        </optgroup>
-                        <optgroup label="Other - Horizontal">
-                          <option value="468x60">468 x 60 Banner</option>
-                          <option value="234x60">234 x 60 Half Banner</option>
-                        </optgroup>
-                        <optgroup label="Other - Vertical">
-                          <option value="120x600">120 x 600 Skyscraper</option>
-                          <option value="120x240">120 x 240 Vertical Banner</option>
-                        </optgroup>
-                        <optgroup label="Other - Square">
-                          <option value="250x250">250 x 250 Square</option>
-                          <option value="200x200">200 x 200 Small Square</option>
-                          <option value="180x150">180 x 150 Small Rectangle</option>
-                          <option value="125x125">125 x 125 Button</option>
-                        </optgroup>
-                      </select>
-                    </div>
+                  #end for
                     <div class="form-field-input"><input type="button" name="save" value="Save" /><input type="button" name="cancel" value="Cancel" /></div>
                   </div>
                 </div>
               </div>
             </div>
             <!-- end widget -->
+            #end for
 
             <div style="width:736px;margin:10px 20px;">
               <select id="select_widget_0" name="select_widget">
